--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,8 +12,13 @@ layout: default
         {{ page.date | date: date_format }}
       </time>
       {%- if page.author -%}
-        • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
-      {%- endif -%}</p>
+        • 
+        <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
+      {%- endif -%}
+      <span> 
+      {% include share-bar.html %}
+      </span>
+    </p>
   </header>
 
   <div class="post-content e-content" itemprop="articleBody">
